# NicheFinder

./: amazon_objets_connectes_v38.csv  amazon_objets_connectes_v41.csv  amazon_objets_connectes_v42.csv  async_scraper.py  code.ipynb  df_clean_2.csv  main.py  produits_amazon_scrapes.parquet  pyproject.toml  python test_lxml.py  run_etl 2.sh  run_etl.sh 2.save
Streamlit/: app.py
cleaner/: clean_data.py
dashboard/: app.py
data/: amazon_objets_connectes_v37.csv  amazon_objets_connectes_v38.csv  amazon_objets_connectes_v39.csv  amazon_objets_connectes_v40.csv  amazon_objets_connectes_v40.parquet  df_clean.csv
data/cleaned/: df_clean_2025-07-08.csv  df_clean_2025-07-09.csv  df_clean_2025-07-10.csv  df_clean_2025-07-11.csv  df_clean_2025-07-16.csv
data/db/: amazon_2025-07-08.db  amazon_2025-07-09.db  amazon_2025-07-10.db  amazon_2025-07-11.db  amazon_2025-07-16.db
data/scraped/: amazon_details_2025-07-10.csv  amazon_details_2025-07-11.csv  amazon_details_2025-07-16.csv  raw_data_2025-07-08.csv  raw_data_2025-07-09.csv  raw_data_2025-07-10-19-25-50.csv  raw_data_2025-07-11-15-48-57.csv  raw_data_2025-07-11-16-10-55.csv  raw_data_2025-07-16-11-15-38.csv  raw_data_2025-07-16-11-41-18.csv
etl/: etl 2.py  etl.py  etl_2.py
notebooks/: Analyse_classement.ipynb  amazon_db.ipynb  code.ipynb  df_extract.parquet  etl.ipynb  list_dossier.ipynb  v1.ipynb  viz.ipynb
scraper/: scraper.py  scraper_2.py  scraper_async.py
utils/: io_utils.py
