[project]
name = "nichefinder-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pytrends>=4.9.2",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "streamlit>=1.45.1",
]
